--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <div id="loader">
             <p class="text-center">Loading...</p>
           </div>
-          <div id="content" style="display: none;">
+          <div id="content" style="display:none">
             <table class="table">
               <thead>
                 <tr>
